k8s-service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: youtube-rag-service-nodeport
  labels:
    app: youtube-rag
spec:
  selector:
    app: youtube-rag
  ports:
  - port: 8501
    targetPort: 8501
    nodePort: 30001  # External port on nodes
    protocol: TCP
  type: NodePort
